[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/base/title/profile.gd" type="Script" id=1]

[node name="profile" type="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 96.0
offset_bottom = 1.0
window_title = "Profiles"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profiles" type="HSplitContainer" parent="VBoxContainer"]
offset_right = 950.0
offset_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3
collapsed = true
dragger_visibility = 2

[node name="VBoxContainer_L" type="VBoxContainer" parent="VBoxContainer/Profiles"]
offset_right = 475.0
offset_bottom = 457.0
size_flags_horizontal = 3

[node name="Profile_Name" type="Label" parent="VBoxContainer/Profiles/VBoxContainer_L"]
offset_right = 475.0
offset_bottom = 14.0

[node name="Profile_Play_Time" type="Label" parent="VBoxContainer/Profiles/VBoxContainer_L"]
offset_top = 18.0
offset_right = 475.0
offset_bottom = 32.0

[node name="VBoxContainer_R" type="VBoxContainer" parent="VBoxContainer/Profiles"]
offset_left = 475.0
offset_right = 950.0
offset_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProfileList" type="ItemList" parent="VBoxContainer/Profiles/VBoxContainer_R"]
offset_right = 475.0
offset_bottom = 457.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[node name="crsede" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 461.0
offset_right = 950.0
offset_bottom = 481.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="VBoxContainer/crsede"]
offset_right = 314.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../../Profiles/VBoxContainer_R/ProfileList")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CREATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Select" type="Button" parent="VBoxContainer/crsede"]
offset_left = 318.0
offset_right = 632.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../../Profiles/VBoxContainer_R/ProfileList")
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="VBoxContainer/crsede"]
offset_left = 636.0
offset_right = 950.0
offset_bottom = 20.0
focus_neighbor_top = NodePath("../../Profiles/VBoxContainer_R/ProfileList")
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
text = "DELETE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileDeleteDialog" type="ConfirmationDialog" parent="."]
visible = true
offset_right = 200.0
offset_bottom = 70.0
window_title = "WARNING: PROFILE DELETION !!!"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfileCreateDialog" type="AcceptDialog" parent="."]
offset_right = 83.0
offset_bottom = 58.0
window_title = "Enter Profile Name"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ProfileCreateDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 160.0
offset_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
max_length = 45
clear_button_enabled = true
placeholder_text = "enter profile name"
caret_blink = true
caret_blink_interval = 0.5
